<resources>
    <string name="app_name">RxJavaSample</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="invalid_pass">Invalid Password!</string>
    <string name="submit">Submit</string>
    <string name="hola">Hola!</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="posts">Posts</string>
    <string name="favourites">Favourites</string>
</resources>